// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerRegular component renders 1`] = `
@media  {
  :root,
  .t-ibLFLe {
    --default-colors: [object Object];
    --default-space: [object Object];
    --default-fontSizes: [object Object];
    --default-fonts: [object Object];
    --default-sizes: [object Object];
    --default-radii: [object Object];
    --default-shadows: [object Object];
    --default-ratios: [object Object];
    --colors-textBold: hsl(0, 0%, 12%);
    --colors-textRegular: hsl(0, 0%, 20%);
    --colors-textSubtle: hsl(0, 0%, 33%);
    --colors-textMinimal: hsl(0, 0%, 46%);
    --colors-background: hsl(0, 0%, 96%);
    --colors-backgroundAccent: hsl(215, 100%, 98%);
    --colors-grey100: hsl(0, 0%, 96%);
    --colors-grey200: hsl(0, 0%, 92%);
    --colors-grey300: hsl(0, 0%, 88%);
    --colors-grey400: hsl(0, 0%, 81%);
    --colors-grey500: hsl(0, 0%, 73%);
    --colors-grey600: hsl(0, 0%, 62%);
    --colors-grey700: hsl(0, 0%, 46%);
    --colors-grey800: hsl(0, 0%, 33%);
    --colors-grey900: hsl(0, 0%, 20%);
    --colors-grey1000: hsl(0, 0%, 12%);
    --colors-grey1100: hsl(0, 0%, 10%);
    --colors-grey1200: hsl(0, 0%, 6%);
    --colors-blue100: hsl(215, 100%, 98%);
    --colors-blue200: hsl(212, 100%, 95%);
    --colors-blue300: hsl(211, 100%, 92%);
    --colors-blue400: hsl(211, 100%, 88%);
    --colors-blue500: hsl(212, 100%, 80%);
    --colors-blue600: hsl(213, 100%, 71%);
    --colors-blue700: hsl(214, 100%, 58%);
    --colors-blue800: hsl(217, 92%, 51%);
    --colors-blue900: hsl(223, 79%, 44%);
    --colors-blue1000: hsl(228, 82%, 35%);
    --colors-blue1100: hsl(228, 63%, 23%);
    --colors-blue1200: hsl(227, 57%, 11%);
    --colors-pink100: hsl(311, 100%, 98%);
    --colors-pink200: hsl(310, 100%, 95%);
    --colors-pink300: hsl(311, 100%, 90%);
    --colors-pink400: hsl(313, 100%, 80%);
    --colors-pink500: hsl(313, 83%, 72%);
    --colors-pink600: hsl(315, 82%, 66%);
    --colors-pink700: hsl(316, 63%, 56%);
    --colors-pink800: hsl(317, 63%, 44%);
    --colors-pink900: hsl(318, 63%, 37%);
    --colors-pink1000: hsl(319, 55%, 33%);
    --colors-pink1100: hsl(318, 98%, 16%);
    --colors-pink1200: hsl(318, 97%, 12%);
    --colors-purple100: hsl(246, 83%, 98%);
    --colors-purple200: hsl(244, 74%, 95%);
    --colors-purple300: hsl(246, 76%, 92%);
    --colors-purple400: hsl(246, 74%, 85%);
    --colors-purple500: hsl(249, 72%, 76%);
    --colors-purple600: hsl(252, 70%, 66%);
    --colors-purple700: hsl(256, 65%, 62%);
    --colors-purple800: hsl(252, 51%, 51%);
    --colors-purple900: hsl(257, 54%, 42%);
    --colors-purple1000: hsl(257, 53%, 35%);
    --colors-purple1100: hsl(255, 57%, 23%);
    --colors-purple1200: hsl(255, 76%, 13%);
    --colors-cyan100: hsl(198, 100%, 97%);
    --colors-cyan200: hsl(199, 100%, 94%);
    --colors-cyan300: hsl(201, 100%, 89%);
    --colors-cyan400: hsl(200, 100%, 84%);
    --colors-cyan500: hsl(201, 96%, 73%);
    --colors-cyan600: hsl(202, 85%, 60%);
    --colors-cyan700: hsl(204, 81%, 46%);
    --colors-cyan800: hsl(205, 100%, 38%);
    --colors-cyan900: hsl(206, 100%, 30%);
    --colors-cyan1000: hsl(205, 100%, 21%);
    --colors-cyan1100: hsl(206, 97%, 15%);
    --colors-cyan1200: hsl(207, 73%, 9%);
    --colors-green100: hsl(148, 93%, 94%);
    --colors-green200: hsl(149, 95%, 91%);
    --colors-green300: hsl(147, 87%, 85%);
    --colors-green400: hsl(148, 84%, 70%);
    --colors-green500: hsl(148, 75%, 54%);
    --colors-green600: hsl(148, 77%, 45%);
    --colors-green700: hsl(148, 84%, 36%);
    --colors-green800: hsl(158, 79%, 29%);
    --colors-green900: hsl(166, 71%, 24%);
    --colors-green1000: hsl(166, 67%, 20%);
    --colors-green1100: hsl(169, 88%, 10%);
    --colors-green1200: hsl(155, 92%, 5%);
    --colors-magenta100: hsl(330, 100%, 99%);
    --colors-magenta200: hsl(329, 100%, 96%);
    --colors-magenta300: hsl(332, 100%, 92%);
    --colors-magenta400: hsl(333, 100%, 90%);
    --colors-magenta500: hsl(333, 90%, 80%);
    --colors-magenta600: hsl(333, 87%, 72%);
    --colors-magenta700: hsl(333, 75%, 59%);
    --colors-magenta800: hsl(333, 69%, 49%);
    --colors-magenta900: hsl(333, 74%, 36%);
    --colors-magenta1000: hsl(333, 86%, 25%);
    --colors-magenta1100: hsl(333, 95%, 16%);
    --colors-magenta1200: hsl(334, 62%, 10%);
    --colors-red100: hsl(0, 100%, 99%);
    --colors-red200: hsl(0, 100%, 96%);
    --colors-red300: hsl(0, 100%, 96%);
    --colors-red400: hsl(357, 100%, 93%);
    --colors-red500: hsl(356, 96%, 83%);
    --colors-red600: hsl(357, 90%, 73%);
    --colors-red700: hsl(357, 80%, 59%);
    --colors-red800: hsl(357, 76%, 49%);
    --colors-red900: hsl(357, 73%, 37%);
    --colors-red1000: hsl(357, 79%, 26%);
    --colors-red1100: hsl(357, 91%, 17%);
    --colors-red1200: hsl(357, 73%, 10%);
    --colors-teal100: hsl(180, 83%, 95%);
    --colors-teal200: hsl(180, 75%, 88%);
    --colors-teal300: hsl(180, 71%, 78%);
    --colors-teal400: hsl(179, 70%, 71%);
    --colors-teal500: hsl(179, 65%, 52%);
    --colors-teal600: hsl(179, 76%, 41%);
    --colors-teal700: hsl(179, 91%, 31%);
    --colors-teal800: hsl(178, 100%, 25%);
    --colors-teal900: hsl(180, 100%, 18%);
    --colors-teal1000: hsl(183, 100%, 13%);
    --colors-teal1100: hsl(187, 92%, 10%);
    --colors-teal1200: hsl(186, 56%, 7%);
    --colors-orange100: hsl(45, 100%, 96%);
    --colors-orange200: hsl(46, 100%, 89%);
    --colors-orange300: hsl(46, 100%, 77%);
    --colors-orange400: hsl(44, 100%, 65%);
    --colors-orange500: hsl(41, 100%, 55%);
    --colors-orange600: hsl(29, 100%, 55%);
    --colors-orange700: hsl(35, 95%, 50%);
    --colors-orange800: hsl(22, 94%, 54%);
    --colors-orange900: hsl(22, 100%, 46%);
    --colors-orange1000: hsl(20, 100%, 39%);
    --colors-orange1100: hsl(18, 100%, 27%);
    --colors-orange1200: hsl(18, 100%, 21%);
    --colors-yellow100: hsl(53, 94%, 93%);
    --colors-yellow200: hsl(54, 92%, 85%);
    --colors-yellow300: hsl(54, 92%, 75%);
    --colors-yellow400: hsl(52, 97%, 63%);
    --colors-yellow500: hsl(51, 100%, 46%);
    --colors-yellow600: hsl(49, 100%, 39%);
    --colors-yellow700: hsl(48, 100%, 35%);
    --colors-yellow800: hsl(46, 100%, 30%);
    --colors-yellow900: hsl(44, 100%, 22%);
    --colors-yellow1000: hsl(44, 100%, 18%);
    --colors-yellow1100: hsl(41, 100%, 11%);
    --colors-yellow1200: hsl(39, 100%, 8%);
    --colors-lime100: hsl(73, 94%, 93%);
    --colors-lime200: hsl(73, 94%, 87%);
    --colors-lime300: hsl(73, 90%, 77%);
    --colors-lime400: hsl(74, 82%, 69%);
    --colors-lime500: hsl(74, 68%, 58%);
    --colors-lime600: hsl(74, 77%, 41%);
    --colors-lime700: hsl(75, 100%, 31%);
    --colors-lime800: hsl(75, 100%, 27%);
    --colors-lime900: hsl(75, 100%, 19%);
    --colors-lime1000: hsl(75, 100%, 15%);
    --colors-lime1100: hsl(75, 100%, 9%);
    --colors-lime1200: hsl(74, 100%, 6%);
    --colors-lapis100: hsl(214, 100%, 97%);
    --colors-lapis200: hsl(215, 100%, 95%);
    --colors-lapis300: hsl(202, 100%, 87%);
    --colors-lapis400: hsl(212, 100%, 83%);
    --colors-lapis500: hsl(220, 95%, 76%);
    --colors-lapis600: hsl(230, 84%, 70%);
    --colors-lapis700: hsl(240, 79%, 66%);
    --colors-lapis800: hsl(240, 59%, 52%);
    --colors-lapis900: hsl(240, 58%, 38%);
    --colors-lapis1000: hsl(240, 63%, 29%);
    --colors-lapis1100: hsl(240, 87%, 18%);
    --colors-lapis1200: hsl(240, 97%, 12%);
    --colors-maroon100: hsl(15, 100%, 98%);
    --colors-maroon200: hsl(16, 100%, 93%);
    --colors-maroon300: hsl(16, 100%, 87%);
    --colors-maroon400: hsl(16, 100%, 80%);
    --colors-maroon500: hsl(7, 89%, 70%);
    --colors-maroon600: hsl(7, 78%, 60%);
    --colors-maroon700: hsl(7, 67%, 44%);
    --colors-maroon800: hsl(7, 95%, 32%);
    --colors-maroon900: hsl(349, 89%, 28%);
    --colors-maroon1000: hsl(346, 77%, 26%);
    --colors-maroon1100: hsl(335, 73%, 20%);
    --colors-maroon1200: hsl(335, 81%, 12%);
    --colors-marsh100: hsl(147, 50%, 96%);
    --colors-marsh200: hsl(147, 27%, 88%);
    --colors-marsh300: hsl(147, 26%, 82%);
    --colors-marsh400: hsl(147, 25%, 73%);
    --colors-marsh500: hsl(147, 22%, 60%);
    --colors-marsh600: hsl(147, 15%, 48%);
    --colors-marsh700: hsl(147, 15%, 37%);
    --colors-marsh800: hsl(147, 23%, 29%);
    --colors-marsh900: hsl(147, 25%, 21%);
    --colors-marsh1000: hsl(147, 17%, 18%);
    --colors-marsh1100: hsl(147, 24%, 13%);
    --colors-marsh1200: hsl(147, 14%, 7%);
    --colors-tonal50: hsl(0, 0%, 96%);
    --colors-tonal100: hsl(0, 0%, 92%);
    --colors-tonal200: hsl(0, 0%, 62%);
    --colors-tonal300: hsl(0, 0%, 46%);
    --colors-tonal400: hsl(0, 0%, 33%);
    --colors-tonal500: hsl(0, 0%, 20%);
    --colors-tonal600: hsl(0, 0%, 12%);
    --colors-alpha100: hsla(0, 0%, 20%, 0.1);
    --colors-alpha150: hsla(0, 0%, 20%, 0.15);
    --colors-alpha200: hsla(0, 0%, 20%, 0.2);
    --colors-alpha250: hsla(0, 0%, 20%, 0.25);
    --colors-alpha600: hsla(0, 0%, 20%, 0.6);
    --colors-brandRed: hsl(0, 91%, 64%);
    --colors-brandRedAccent: hsl(14, 100%, 71%);
    --colors-brandGreen: hsl(128, 47%, 53%);
    --colors-brandGreenAccent: hsl(168, 100%, 20%);
    --colors-brandPurple: hsl(256, 65%, 62%);
    --colors-brandPurpleAccent: hsl(256, 93%, 35%);
    --colors-brandYellow: hsl(41, 100%, 55%);
    --colors-brandYellowAccent: hsl(33, 100%, 50%);
    --colors-infoLight: hsl(215, 100%, 98%);
    --colors-info: hsl(217, 92%, 51%);
    --colors-infoMid: hsl(223, 79%, 44%);
    --colors-infoDark: hsl(228, 82%, 35%);
    --colors-successLight: hsl(119, 44%, 94%);
    --colors-success: hsl(119, 100%, 27%);
    --colors-successMid: hsl(124, 100%, 22%);
    --colors-successDark: hsl(126, 100%, 17%);
    --colors-dangerLight: hsl(0, 77%, 95%);
    --colors-danger: hsl(0, 96%, 48%);
    --colors-dangerMid: hsl(0, 96%, 41%);
    --colors-dangerDark: hsl(0, 97%, 34%);
    --colors-warningLight: hsl(39, 100%, 94%);
    --colors-warning: hsl(41, 100%, 55%);
    --colors-warningMid: hsl(41, 89%, 48%);
    --colors-warningDark: hsl(41, 100%, 41%);
    --colors-warningText: hsl(24, 100%, 37%);
    --colors-subjectEnglish: hsl(0, 91%, 64%);
    --colors-subjectMaths: hsl(217, 92%, 51%);
    --colors-subjectScience: hsl(256, 65%, 62%);
    --colors-subjectVerbalReasoning: hsl(128, 47%, 53%);
    --colors-subjectNonVerbalReasoning: hsl(41, 100%, 55%);
    --colors-subjectCreativeWriting: hsl(33, 100%, 50%);
    --colors-subjectExamSkills: hsl(256, 93%, 35%);
    --colors-glBlueLight: hsl(222, 68%, 78%);
    --colors-glBluePrimary: hsl(222, 56%, 55%);
    --colors-glBlueDark: hsl(222, 35%, 43%);
    --colors-primary100: hsl(215, 100%, 98%);
    --colors-primary200: hsl(212, 100%, 95%);
    --colors-primary300: hsl(211, 100%, 92%);
    --colors-primary400: hsl(211, 100%, 88%);
    --colors-primary500: hsl(212, 100%, 80%);
    --colors-primary600: hsl(213, 100%, 71%);
    --colors-primary700: hsl(214, 100%, 58%);
    --colors-primary800: hsl(217, 92%, 51%);
    --colors-primary900: hsl(223, 79%, 44%);
    --colors-primary1000: hsl(228, 82%, 35%);
    --colors-primary1100: hsl(228, 63%, 23%);
    --colors-primary1200: hsl(227, 57%, 11%);
    --space-0: 0.125rem;
    --space-1: 0.25rem;
    --space-2: 0.5rem;
    --space-3: 0.75rem;
    --space-4: 1rem;
    --space-5: 2rem;
    --space-6: 2.5rem;
    --space-7: 3rem;
    --space-8: 4rem;
    --space-9: 5rem;
    --space-24: 1.5rem;
    --fontSizes-xs: 0.75rem;
    --fontSizes-sm: 0.875rem;
    --fontSizes-md: 1rem;
    --fontSizes-lg: 1.3125rem;
    --fontSizes-xl: 1.75rem;
    --fontSizes-2xl: 2.3125rem;
    --fontSizes-3xl: 3.125rem;
    --fontSizes-4xl: 5.625rem;
    --fonts-sans: system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --fonts-mono: 'SFMono-Regular', Consolas, Menlo, monospace;
    --fonts-display: 'National 2 Condensed', system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --fonts-body: 'Inter', system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --sizes-0: 0.5rem;
    --sizes-1: 1rem;
    --sizes-2: 1.5rem;
    --sizes-3: 2rem;
    --sizes-4: 2.5rem;
    --sizes-5: 3rem;
    --sizes-6: 4rem;
    --sizes-7: 6rem;
    --sizes-8: 8rem;
    --radii-0: 0.25rem;
    --radii-1: 0.5rem;
    --radii-2: 0.75rem;
    --radii-3: 1rem;
    --radii-round: 100rem;
    --shadows-0: 0 1px 3px hsla(0, 0%, 20%, 0.1), 0 1px 2px hsla(0, 0%, 20%, 0.15);
    --shadows-1: 0 3px 6px hsla(0, 0%, 20%, 0.1), 0 3px 6px hsla(0, 0%, 20%, 0.1);
    --shadows-2: 0 10px 20px hsla(0, 0%, 20%, 0.1), 0 6px 6px hsla(0, 0%, 20%, 0.1);
    --shadows-3: 0 14px 28px hsla(0, 0%, 20%, 0.15), 0 10px 10px hsla(0, 0%, 20%, 0.1);
    --ratios-16-9: 16/9;
    --ratios-3-2: 3/2;
    --ratios-4-3: 4/3;
    --ratios-1-1: 1/1;
    --ratios-3-4: 3/4;
  }

  .t-grLKLB {
    --colors-foreground: var(--colors-grey1000);
    --colors-foreground7plus: #FFFFFF;
    --colors-base1: #FFFFFF;
    --colors-base2: var(--colors-purple100);
    --colors-base3: var(--colors-purple200);
    --colors-base4: var(--colors-purple300);
    --colors-base5: var(--colors-purple400);
    --colors-base6: var(--colors-purple500);
    --colors-base7: var(--colors-purple600);
    --colors-base8: var(--colors-purple700);
    --colors-base9: var(--colors-purple800);
    --colors-base10: var(--colors-purple900);
    --colors-base11: var(--colors-purple1000);
  }
}

@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-bRupYu {
    position: relative;
    width: 100%;
    border-radius: var(--radii-0);
    overflow: hidden;
    color: var(--colors-foreground);
    --banner-heading-color: var(--colors-foreground);
    --banner-text-color: var(--colors-grey900);
  }

  .c-gjbGPV {
    width: 62%;
    flex-grow: 1;
  }

  .c-iUMJTc {
    font-weight: 700;
    margin: 0;
  }

  .c-kHdlDu {
    margin-bottom: var(--space-4);
    color: var(--banner-heading-color);
  }

  .c-ctivzP {
    margin: 0;
  }

  .c-ctivzP > .c-ctivzP:before,
  .c-ctivzP > .c-ctivzP:after {
    display: none;
  }

  .c-bYxtOe {
    color: var(--banner-text-color);
  }

  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-eEYQKA {
    position: relative;
    overflow: hidden;
    width: 38%;
  }

  .c-iSBxEZ {
    vertical-align: middle;
    max-width: 100%;
  }

  .c-jQKlgO {
    position: absolute;
    max-width: auto;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}

@media  {
  .c-bRupYu-cobKBi-emphasis-bold {
    background: var(--colors-base11);
    color: var(--colors-foreground7plus);
    --banner-heading-color: var(--colors-foreground7plus);
    --banner-text-color: var(--colors-grey100);
  }

  .c-gjbGPV-lppGPL-size-sm {
    padding: var(--space-4);
  }

  .c-iUMJTc-kCkEYj-size-sm {
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-lg);
    line-height: 1.14;
  }

  .c-iUMJTc-kCkEYj-size-sm::before {
    content: '';
    margin-bottom: -0.2078em;
    display: table;
  }

  .c-iUMJTc-kCkEYj-size-sm::after {
    content: '';
    margin-top: -0.2078em;
    display: table;
  }

  .c-ctivzP-bndJoy-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
  }

  .c-ctivzP-bndJoy-size-sm::before {
    content: '';
    margin-bottom: -0.4056em;
    display: table;
  }

  .c-ctivzP-bndJoy-size-sm::after {
    content: '';
    margin-top: -0.4056em;
    display: table;
  }

  .c-ctivzP-eMzMJc-weight-normal {
    font-weight: 400;
  }

  .c-ctivzP-cyRcZm-family-body {
    font-family: var(--fonts-body);
  }

  .c-bYxtOe-llIiIE-containerSize-sm {
    margin-bottom: var(--space-4);
  }

  .c-dhzjXW-iTKOFX-direction-column {
    flex-direction: column;
  }

  .c-dhzjXW-kaVYFn-gap-2 {
    gap: var(--space-2);
  }

  .c-kaaUSm-cbWAnW-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
    height: var(--sizes-3);
    padding-left: var(--space-4);
    padding-right: var(--space-4);
    gap: var(--space-2);
  }

  .c-kaaUSm-cbWAnW-size-sm .c-hMRxhp {
    height: 16px;
    width: 16px;
  }

  .c-kaaUSm-fGHEql-fullWidth-true {
    width: 100%;
  }

  .c-eEYQKA-kBYYkb-size-sm {
    display: none;
  }
}

@media  {
@media (min-width: 800px) {
    .c-gjbGPV-iOglxG-size-md {
      padding: var(--space-24);
      padding-right: var(--space-5);
    }
}

@media (min-width: 800px) {
    .c-ctivzP-flAohk-size-md {
      font-size: var(--fontSizes-md);
      line-height: 1.5;
    }
}

@media (min-width: 800px) {
    .c-ctivzP-flAohk-size-md::before {
      content: '';
      margin-bottom: -0.3864em;
      display: table;
    }
}

@media (min-width: 800px) {
    .c-ctivzP-flAohk-size-md::after {
      content: '';
      margin-top: -0.3864em;
      display: table;
    }
}

@media (min-width: 800px) {
    .c-bYxtOe-gyGikE-containerSize-md {
      margin-bottom: var(--space-24);
    }
}

@media (min-width: 800px) {
    .c-dhzjXW-ioYFCt-direction-row {
      flex-direction: row;
    }
}

@media (min-width: 800px) {
    .c-dhzjXW-ecwQUv-gap-4 {
      gap: var(--space-4);
    }
}

@media (min-width: 800px) {
    .c-kaaUSm-jiYjGq-size-md {
      font-size: var(--fontSizes-md);
      line-height: 1.5;
      height: var(--sizes-4);
      padding-left: var(--space-5);
      padding-right: var(--space-5);
      gap: var(--space-3);
    }
}

@media (min-width: 800px) {
    .c-kaaUSm-jiYjGq-size-md .c-hMRxhp {
      height: 20px;
      width: 20px;
    }
}

@media (min-width: 800px) {
    .c-kaaUSm-fXTFOn-fullWidth-false {
      width: max-content;
    }
}

@media (min-width: 800px) {
    .c-eEYQKA-cwmvBm-size-md {
      display: block;
    }
}
}

@media  {
  .c-kaaUSm-klvXVG-cv {
    background: white;
    color: var(--colors-primary800);
  }

  .c-kaaUSm-klvXVG-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-klvXVG-cv:not([disabled]):hover,
  .c-kaaUSm-klvXVG-cv:not([disabled]):focus {
    background: rgba(255, 255, 255, 0.9);
    color: var(--colors-primary800);
  }

  .c-kaaUSm-klvXVG-cv:not([disabled]):active {
    background: rgba(255, 255, 255, 0.75);
  }

  .c-kaaUSm-bSkyfM-cv {
    border: 1px solid;
    border-color: currentColor;
    color: white;
  }

  .c-kaaUSm-bSkyfM-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-bSkyfM-cv:not([disabled]):hover,
  .c-kaaUSm-bSkyfM-cv:not([disabled]):focus {
    text-decoration: none;
    color: rgba(255, 255, 255, 0.8);
  }

  .c-kaaUSm-bSkyfM-cv:not([disabled]):active {
    color: rgba(255, 255, 255, 0.65);
  }
}

<div>
  <div
    class="c-dhzjXW c-bRupYu c-bRupYu-cobKBi-emphasis-bold t-grLKLB"
    role="banner"
  >
    <div
      class="c-PJLV c-gjbGPV c-gjbGPV-lppGPL-size-sm c-gjbGPV-iOglxG-size-md"
    >
      <h2
        class="c-iUMJTc c-iUMJTc-kCkEYj-size-sm c-kHdlDu"
      >
        Get ready for entrance exams
      </h2>
      <p
        class="c-ctivzP c-ctivzP-bndJoy-size-sm c-ctivzP-eMzMJc-weight-normal c-ctivzP-cyRcZm-family-body c-ctivzP-flAohk-size-md c-bYxtOe c-bYxtOe-llIiIE-containerSize-sm c-bYxtOe-gyGikE-containerSize-md"
      >
        Talk to our admissions experts on to learn how to support your child. This is an example lor!
      </p>
      <div
        class="c-dhzjXW c-dhzjXW-iTKOFX-direction-column c-dhzjXW-kaVYFn-gap-2 c-dhzjXW-ioYFCt-direction-row c-dhzjXW-ecwQUv-gap-4"
      >
        <button
          class="c-kaaUSm c-kaaUSm-cbWAnW-size-sm c-kaaUSm-fGHEql-fullWidth-true c-kaaUSm-jiYjGq-size-md c-kaaUSm-fXTFOn-fullWidth-false c-kaaUSm-klvXVG-cv"
          type="button"
        >
          Contact an expert
        </button>
        <button
          class="c-kaaUSm c-kaaUSm-cbWAnW-size-sm c-kaaUSm-fGHEql-fullWidth-true c-kaaUSm-jiYjGq-size-md c-kaaUSm-fXTFOn-fullWidth-false c-kaaUSm-bSkyfM-cv"
          type="button"
        >
          Secondary
        </button>
      </div>
    </div>
    <div
      class="c-PJLV c-eEYQKA c-eEYQKA-kBYYkb-size-sm c-eEYQKA-cwmvBm-size-md"
    >
      <img
        alt="kitten"
        class="c-iSBxEZ c-jQKlgO"
        src="http://placekitten.com/200/300"
      />
    </div>
  </div>
</div>
`;

exports[`BannerRegular component renders dismissible variant 1`] = `
@media  {
  :root,
  .t-ibLFLe {
    --default-colors: [object Object];
    --default-space: [object Object];
    --default-fontSizes: [object Object];
    --default-fonts: [object Object];
    --default-sizes: [object Object];
    --default-radii: [object Object];
    --default-shadows: [object Object];
    --default-ratios: [object Object];
    --colors-textBold: hsl(0, 0%, 12%);
    --colors-textRegular: hsl(0, 0%, 20%);
    --colors-textSubtle: hsl(0, 0%, 33%);
    --colors-textMinimal: hsl(0, 0%, 46%);
    --colors-background: hsl(0, 0%, 96%);
    --colors-backgroundAccent: hsl(215, 100%, 98%);
    --colors-grey100: hsl(0, 0%, 96%);
    --colors-grey200: hsl(0, 0%, 92%);
    --colors-grey300: hsl(0, 0%, 88%);
    --colors-grey400: hsl(0, 0%, 81%);
    --colors-grey500: hsl(0, 0%, 73%);
    --colors-grey600: hsl(0, 0%, 62%);
    --colors-grey700: hsl(0, 0%, 46%);
    --colors-grey800: hsl(0, 0%, 33%);
    --colors-grey900: hsl(0, 0%, 20%);
    --colors-grey1000: hsl(0, 0%, 12%);
    --colors-grey1100: hsl(0, 0%, 10%);
    --colors-grey1200: hsl(0, 0%, 6%);
    --colors-blue100: hsl(215, 100%, 98%);
    --colors-blue200: hsl(212, 100%, 95%);
    --colors-blue300: hsl(211, 100%, 92%);
    --colors-blue400: hsl(211, 100%, 88%);
    --colors-blue500: hsl(212, 100%, 80%);
    --colors-blue600: hsl(213, 100%, 71%);
    --colors-blue700: hsl(214, 100%, 58%);
    --colors-blue800: hsl(217, 92%, 51%);
    --colors-blue900: hsl(223, 79%, 44%);
    --colors-blue1000: hsl(228, 82%, 35%);
    --colors-blue1100: hsl(228, 63%, 23%);
    --colors-blue1200: hsl(227, 57%, 11%);
    --colors-pink100: hsl(311, 100%, 98%);
    --colors-pink200: hsl(310, 100%, 95%);
    --colors-pink300: hsl(311, 100%, 90%);
    --colors-pink400: hsl(313, 100%, 80%);
    --colors-pink500: hsl(313, 83%, 72%);
    --colors-pink600: hsl(315, 82%, 66%);
    --colors-pink700: hsl(316, 63%, 56%);
    --colors-pink800: hsl(317, 63%, 44%);
    --colors-pink900: hsl(318, 63%, 37%);
    --colors-pink1000: hsl(319, 55%, 33%);
    --colors-pink1100: hsl(318, 98%, 16%);
    --colors-pink1200: hsl(318, 97%, 12%);
    --colors-purple100: hsl(246, 83%, 98%);
    --colors-purple200: hsl(244, 74%, 95%);
    --colors-purple300: hsl(246, 76%, 92%);
    --colors-purple400: hsl(246, 74%, 85%);
    --colors-purple500: hsl(249, 72%, 76%);
    --colors-purple600: hsl(252, 70%, 66%);
    --colors-purple700: hsl(256, 65%, 62%);
    --colors-purple800: hsl(252, 51%, 51%);
    --colors-purple900: hsl(257, 54%, 42%);
    --colors-purple1000: hsl(257, 53%, 35%);
    --colors-purple1100: hsl(255, 57%, 23%);
    --colors-purple1200: hsl(255, 76%, 13%);
    --colors-cyan100: hsl(198, 100%, 97%);
    --colors-cyan200: hsl(199, 100%, 94%);
    --colors-cyan300: hsl(201, 100%, 89%);
    --colors-cyan400: hsl(200, 100%, 84%);
    --colors-cyan500: hsl(201, 96%, 73%);
    --colors-cyan600: hsl(202, 85%, 60%);
    --colors-cyan700: hsl(204, 81%, 46%);
    --colors-cyan800: hsl(205, 100%, 38%);
    --colors-cyan900: hsl(206, 100%, 30%);
    --colors-cyan1000: hsl(205, 100%, 21%);
    --colors-cyan1100: hsl(206, 97%, 15%);
    --colors-cyan1200: hsl(207, 73%, 9%);
    --colors-green100: hsl(148, 93%, 94%);
    --colors-green200: hsl(149, 95%, 91%);
    --colors-green300: hsl(147, 87%, 85%);
    --colors-green400: hsl(148, 84%, 70%);
    --colors-green500: hsl(148, 75%, 54%);
    --colors-green600: hsl(148, 77%, 45%);
    --colors-green700: hsl(148, 84%, 36%);
    --colors-green800: hsl(158, 79%, 29%);
    --colors-green900: hsl(166, 71%, 24%);
    --colors-green1000: hsl(166, 67%, 20%);
    --colors-green1100: hsl(169, 88%, 10%);
    --colors-green1200: hsl(155, 92%, 5%);
    --colors-magenta100: hsl(330, 100%, 99%);
    --colors-magenta200: hsl(329, 100%, 96%);
    --colors-magenta300: hsl(332, 100%, 92%);
    --colors-magenta400: hsl(333, 100%, 90%);
    --colors-magenta500: hsl(333, 90%, 80%);
    --colors-magenta600: hsl(333, 87%, 72%);
    --colors-magenta700: hsl(333, 75%, 59%);
    --colors-magenta800: hsl(333, 69%, 49%);
    --colors-magenta900: hsl(333, 74%, 36%);
    --colors-magenta1000: hsl(333, 86%, 25%);
    --colors-magenta1100: hsl(333, 95%, 16%);
    --colors-magenta1200: hsl(334, 62%, 10%);
    --colors-red100: hsl(0, 100%, 99%);
    --colors-red200: hsl(0, 100%, 96%);
    --colors-red300: hsl(0, 100%, 96%);
    --colors-red400: hsl(357, 100%, 93%);
    --colors-red500: hsl(356, 96%, 83%);
    --colors-red600: hsl(357, 90%, 73%);
    --colors-red700: hsl(357, 80%, 59%);
    --colors-red800: hsl(357, 76%, 49%);
    --colors-red900: hsl(357, 73%, 37%);
    --colors-red1000: hsl(357, 79%, 26%);
    --colors-red1100: hsl(357, 91%, 17%);
    --colors-red1200: hsl(357, 73%, 10%);
    --colors-teal100: hsl(180, 83%, 95%);
    --colors-teal200: hsl(180, 75%, 88%);
    --colors-teal300: hsl(180, 71%, 78%);
    --colors-teal400: hsl(179, 70%, 71%);
    --colors-teal500: hsl(179, 65%, 52%);
    --colors-teal600: hsl(179, 76%, 41%);
    --colors-teal700: hsl(179, 91%, 31%);
    --colors-teal800: hsl(178, 100%, 25%);
    --colors-teal900: hsl(180, 100%, 18%);
    --colors-teal1000: hsl(183, 100%, 13%);
    --colors-teal1100: hsl(187, 92%, 10%);
    --colors-teal1200: hsl(186, 56%, 7%);
    --colors-orange100: hsl(45, 100%, 96%);
    --colors-orange200: hsl(46, 100%, 89%);
    --colors-orange300: hsl(46, 100%, 77%);
    --colors-orange400: hsl(44, 100%, 65%);
    --colors-orange500: hsl(41, 100%, 55%);
    --colors-orange600: hsl(29, 100%, 55%);
    --colors-orange700: hsl(35, 95%, 50%);
    --colors-orange800: hsl(22, 94%, 54%);
    --colors-orange900: hsl(22, 100%, 46%);
    --colors-orange1000: hsl(20, 100%, 39%);
    --colors-orange1100: hsl(18, 100%, 27%);
    --colors-orange1200: hsl(18, 100%, 21%);
    --colors-yellow100: hsl(53, 94%, 93%);
    --colors-yellow200: hsl(54, 92%, 85%);
    --colors-yellow300: hsl(54, 92%, 75%);
    --colors-yellow400: hsl(52, 97%, 63%);
    --colors-yellow500: hsl(51, 100%, 46%);
    --colors-yellow600: hsl(49, 100%, 39%);
    --colors-yellow700: hsl(48, 100%, 35%);
    --colors-yellow800: hsl(46, 100%, 30%);
    --colors-yellow900: hsl(44, 100%, 22%);
    --colors-yellow1000: hsl(44, 100%, 18%);
    --colors-yellow1100: hsl(41, 100%, 11%);
    --colors-yellow1200: hsl(39, 100%, 8%);
    --colors-lime100: hsl(73, 94%, 93%);
    --colors-lime200: hsl(73, 94%, 87%);
    --colors-lime300: hsl(73, 90%, 77%);
    --colors-lime400: hsl(74, 82%, 69%);
    --colors-lime500: hsl(74, 68%, 58%);
    --colors-lime600: hsl(74, 77%, 41%);
    --colors-lime700: hsl(75, 100%, 31%);
    --colors-lime800: hsl(75, 100%, 27%);
    --colors-lime900: hsl(75, 100%, 19%);
    --colors-lime1000: hsl(75, 100%, 15%);
    --colors-lime1100: hsl(75, 100%, 9%);
    --colors-lime1200: hsl(74, 100%, 6%);
    --colors-lapis100: hsl(214, 100%, 97%);
    --colors-lapis200: hsl(215, 100%, 95%);
    --colors-lapis300: hsl(202, 100%, 87%);
    --colors-lapis400: hsl(212, 100%, 83%);
    --colors-lapis500: hsl(220, 95%, 76%);
    --colors-lapis600: hsl(230, 84%, 70%);
    --colors-lapis700: hsl(240, 79%, 66%);
    --colors-lapis800: hsl(240, 59%, 52%);
    --colors-lapis900: hsl(240, 58%, 38%);
    --colors-lapis1000: hsl(240, 63%, 29%);
    --colors-lapis1100: hsl(240, 87%, 18%);
    --colors-lapis1200: hsl(240, 97%, 12%);
    --colors-maroon100: hsl(15, 100%, 98%);
    --colors-maroon200: hsl(16, 100%, 93%);
    --colors-maroon300: hsl(16, 100%, 87%);
    --colors-maroon400: hsl(16, 100%, 80%);
    --colors-maroon500: hsl(7, 89%, 70%);
    --colors-maroon600: hsl(7, 78%, 60%);
    --colors-maroon700: hsl(7, 67%, 44%);
    --colors-maroon800: hsl(7, 95%, 32%);
    --colors-maroon900: hsl(349, 89%, 28%);
    --colors-maroon1000: hsl(346, 77%, 26%);
    --colors-maroon1100: hsl(335, 73%, 20%);
    --colors-maroon1200: hsl(335, 81%, 12%);
    --colors-marsh100: hsl(147, 50%, 96%);
    --colors-marsh200: hsl(147, 27%, 88%);
    --colors-marsh300: hsl(147, 26%, 82%);
    --colors-marsh400: hsl(147, 25%, 73%);
    --colors-marsh500: hsl(147, 22%, 60%);
    --colors-marsh600: hsl(147, 15%, 48%);
    --colors-marsh700: hsl(147, 15%, 37%);
    --colors-marsh800: hsl(147, 23%, 29%);
    --colors-marsh900: hsl(147, 25%, 21%);
    --colors-marsh1000: hsl(147, 17%, 18%);
    --colors-marsh1100: hsl(147, 24%, 13%);
    --colors-marsh1200: hsl(147, 14%, 7%);
    --colors-tonal50: hsl(0, 0%, 96%);
    --colors-tonal100: hsl(0, 0%, 92%);
    --colors-tonal200: hsl(0, 0%, 62%);
    --colors-tonal300: hsl(0, 0%, 46%);
    --colors-tonal400: hsl(0, 0%, 33%);
    --colors-tonal500: hsl(0, 0%, 20%);
    --colors-tonal600: hsl(0, 0%, 12%);
    --colors-alpha100: hsla(0, 0%, 20%, 0.1);
    --colors-alpha150: hsla(0, 0%, 20%, 0.15);
    --colors-alpha200: hsla(0, 0%, 20%, 0.2);
    --colors-alpha250: hsla(0, 0%, 20%, 0.25);
    --colors-alpha600: hsla(0, 0%, 20%, 0.6);
    --colors-brandRed: hsl(0, 91%, 64%);
    --colors-brandRedAccent: hsl(14, 100%, 71%);
    --colors-brandGreen: hsl(128, 47%, 53%);
    --colors-brandGreenAccent: hsl(168, 100%, 20%);
    --colors-brandPurple: hsl(256, 65%, 62%);
    --colors-brandPurpleAccent: hsl(256, 93%, 35%);
    --colors-brandYellow: hsl(41, 100%, 55%);
    --colors-brandYellowAccent: hsl(33, 100%, 50%);
    --colors-infoLight: hsl(215, 100%, 98%);
    --colors-info: hsl(217, 92%, 51%);
    --colors-infoMid: hsl(223, 79%, 44%);
    --colors-infoDark: hsl(228, 82%, 35%);
    --colors-successLight: hsl(119, 44%, 94%);
    --colors-success: hsl(119, 100%, 27%);
    --colors-successMid: hsl(124, 100%, 22%);
    --colors-successDark: hsl(126, 100%, 17%);
    --colors-dangerLight: hsl(0, 77%, 95%);
    --colors-danger: hsl(0, 96%, 48%);
    --colors-dangerMid: hsl(0, 96%, 41%);
    --colors-dangerDark: hsl(0, 97%, 34%);
    --colors-warningLight: hsl(39, 100%, 94%);
    --colors-warning: hsl(41, 100%, 55%);
    --colors-warningMid: hsl(41, 89%, 48%);
    --colors-warningDark: hsl(41, 100%, 41%);
    --colors-warningText: hsl(24, 100%, 37%);
    --colors-subjectEnglish: hsl(0, 91%, 64%);
    --colors-subjectMaths: hsl(217, 92%, 51%);
    --colors-subjectScience: hsl(256, 65%, 62%);
    --colors-subjectVerbalReasoning: hsl(128, 47%, 53%);
    --colors-subjectNonVerbalReasoning: hsl(41, 100%, 55%);
    --colors-subjectCreativeWriting: hsl(33, 100%, 50%);
    --colors-subjectExamSkills: hsl(256, 93%, 35%);
    --colors-glBlueLight: hsl(222, 68%, 78%);
    --colors-glBluePrimary: hsl(222, 56%, 55%);
    --colors-glBlueDark: hsl(222, 35%, 43%);
    --colors-primary100: hsl(215, 100%, 98%);
    --colors-primary200: hsl(212, 100%, 95%);
    --colors-primary300: hsl(211, 100%, 92%);
    --colors-primary400: hsl(211, 100%, 88%);
    --colors-primary500: hsl(212, 100%, 80%);
    --colors-primary600: hsl(213, 100%, 71%);
    --colors-primary700: hsl(214, 100%, 58%);
    --colors-primary800: hsl(217, 92%, 51%);
    --colors-primary900: hsl(223, 79%, 44%);
    --colors-primary1000: hsl(228, 82%, 35%);
    --colors-primary1100: hsl(228, 63%, 23%);
    --colors-primary1200: hsl(227, 57%, 11%);
    --space-0: 0.125rem;
    --space-1: 0.25rem;
    --space-2: 0.5rem;
    --space-3: 0.75rem;
    --space-4: 1rem;
    --space-5: 2rem;
    --space-6: 2.5rem;
    --space-7: 3rem;
    --space-8: 4rem;
    --space-9: 5rem;
    --space-24: 1.5rem;
    --fontSizes-xs: 0.75rem;
    --fontSizes-sm: 0.875rem;
    --fontSizes-md: 1rem;
    --fontSizes-lg: 1.3125rem;
    --fontSizes-xl: 1.75rem;
    --fontSizes-2xl: 2.3125rem;
    --fontSizes-3xl: 3.125rem;
    --fontSizes-4xl: 5.625rem;
    --fonts-sans: system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --fonts-mono: 'SFMono-Regular', Consolas, Menlo, monospace;
    --fonts-display: 'National 2 Condensed', system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --fonts-body: 'Inter', system-ui, -apple-system, 'Helvetica Neue', sans-serif;
    --sizes-0: 0.5rem;
    --sizes-1: 1rem;
    --sizes-2: 1.5rem;
    --sizes-3: 2rem;
    --sizes-4: 2.5rem;
    --sizes-5: 3rem;
    --sizes-6: 4rem;
    --sizes-7: 6rem;
    --sizes-8: 8rem;
    --radii-0: 0.25rem;
    --radii-1: 0.5rem;
    --radii-2: 0.75rem;
    --radii-3: 1rem;
    --radii-round: 100rem;
    --shadows-0: 0 1px 3px hsla(0, 0%, 20%, 0.1), 0 1px 2px hsla(0, 0%, 20%, 0.15);
    --shadows-1: 0 3px 6px hsla(0, 0%, 20%, 0.1), 0 3px 6px hsla(0, 0%, 20%, 0.1);
    --shadows-2: 0 10px 20px hsla(0, 0%, 20%, 0.1), 0 6px 6px hsla(0, 0%, 20%, 0.1);
    --shadows-3: 0 14px 28px hsla(0, 0%, 20%, 0.15), 0 10px 10px hsla(0, 0%, 20%, 0.1);
    --ratios-16-9: 16/9;
    --ratios-3-2: 3/2;
    --ratios-4-3: 4/3;
    --ratios-1-1: 1/1;
    --ratios-3-4: 3/4;
  }

  .t-grLKLB {
    --colors-foreground: var(--colors-grey1000);
    --colors-foreground7plus: #FFFFFF;
    --colors-base1: #FFFFFF;
    --colors-base2: var(--colors-purple100);
    --colors-base3: var(--colors-purple200);
    --colors-base4: var(--colors-purple300);
    --colors-base5: var(--colors-purple400);
    --colors-base6: var(--colors-purple500);
    --colors-base7: var(--colors-purple600);
    --colors-base8: var(--colors-purple700);
    --colors-base9: var(--colors-purple800);
    --colors-base10: var(--colors-purple900);
    --colors-base11: var(--colors-purple1000);
  }
}

@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-bRupYu {
    position: relative;
    width: 100%;
    border-radius: var(--radii-0);
    overflow: hidden;
    color: var(--colors-foreground);
    --banner-heading-color: var(--colors-foreground);
    --banner-text-color: var(--colors-grey900);
  }

  .c-gjbGPV {
    width: 62%;
    flex-grow: 1;
  }

  .c-iUMJTc {
    font-weight: 700;
    margin: 0;
  }

  .c-kHdlDu {
    margin-bottom: var(--space-4);
    color: var(--banner-heading-color);
  }

  .c-ctivzP {
    margin: 0;
  }

  .c-ctivzP > .c-ctivzP:before,
  .c-ctivzP > .c-ctivzP:after {
    display: none;
  }

  .c-bYxtOe {
    color: var(--banner-text-color);
  }

  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-eEYQKA {
    position: relative;
    overflow: hidden;
    width: 38%;
  }

  .c-iSBxEZ {
    vertical-align: middle;
    max-width: 100%;
  }

  .c-jQKlgO {
    position: absolute;
    max-width: auto;
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  .c-oUmPa {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    flex-shrink: 0;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-oUmPa[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-gLBWZd {
    z-index: 1;
    position: absolute;
    top: var(--space-3);
    right: var(--space-3);
  }
}

@media  {
  .c-bRupYu-cobKBi-emphasis-bold {
    background: var(--colors-base11);
    color: var(--colors-foreground7plus);
    --banner-heading-color: var(--colors-foreground7plus);
    --banner-text-color: var(--colors-grey100);
  }

  .c-gjbGPV-lppGPL-size-sm {
    padding: var(--space-4);
  }

  .c-iUMJTc-kCkEYj-size-sm {
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-lg);
    line-height: 1.14;
  }

  .c-iUMJTc-kCkEYj-size-sm::before {
    content: '';
    margin-bottom: -0.2078em;
    display: table;
  }

  .c-iUMJTc-kCkEYj-size-sm::after {
    content: '';
    margin-top: -0.2078em;
    display: table;
  }

  .c-ctivzP-bndJoy-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
  }

  .c-ctivzP-bndJoy-size-sm::before {
    content: '';
    margin-bottom: -0.4056em;
    display: table;
  }

  .c-ctivzP-bndJoy-size-sm::after {
    content: '';
    margin-top: -0.4056em;
    display: table;
  }

  .c-ctivzP-eMzMJc-weight-normal {
    font-weight: 400;
  }

  .c-ctivzP-cyRcZm-family-body {
    font-family: var(--fonts-body);
  }

  .c-bYxtOe-llIiIE-containerSize-sm {
    margin-bottom: var(--space-4);
  }

  .c-dhzjXW-iTKOFX-direction-column {
    flex-direction: column;
  }

  .c-dhzjXW-kaVYFn-gap-2 {
    gap: var(--space-2);
  }

  .c-kaaUSm-cbWAnW-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
    height: var(--sizes-3);
    padding-left: var(--space-4);
    padding-right: var(--space-4);
    gap: var(--space-2);
  }

  .c-kaaUSm-cbWAnW-size-sm .c-hMRxhp {
    height: 16px;
    width: 16px;
  }

  .c-kaaUSm-fGHEql-fullWidth-true {
    width: 100%;
  }

  .c-eEYQKA-kBYYkb-size-sm {
    display: none;
  }

  .c-oUmPa-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-oUmPa-rloUt-isRounded-true {
    border-radius: var(--radii-round);
  }

  .c-hMRxhp-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }
}

@media  {
@media (min-width: 800px) {
    .c-gjbGPV-iOglxG-size-md {
      padding: var(--space-24);
      padding-right: var(--space-5);
    }
}

@media (min-width: 800px) {
    .c-ctivzP-flAohk-size-md {
      font-size: var(--fontSizes-md);
      line-height: 1.5;
    }
}

@media (min-width: 800px) {
    .c-ctivzP-flAohk-size-md::before {
      content: '';
      margin-bottom: -0.3864em;
      display: table;
    }
}

@media (min-width: 800px) {
    .c-ctivzP-flAohk-size-md::after {
      content: '';
      margin-top: -0.3864em;
      display: table;
    }
}

@media (min-width: 800px) {
    .c-bYxtOe-gyGikE-containerSize-md {
      margin-bottom: var(--space-24);
    }
}

@media (min-width: 800px) {
    .c-dhzjXW-ioYFCt-direction-row {
      flex-direction: row;
    }
}

@media (min-width: 800px) {
    .c-dhzjXW-ecwQUv-gap-4 {
      gap: var(--space-4);
    }
}

@media (min-width: 800px) {
    .c-kaaUSm-jiYjGq-size-md {
      font-size: var(--fontSizes-md);
      line-height: 1.5;
      height: var(--sizes-4);
      padding-left: var(--space-5);
      padding-right: var(--space-5);
      gap: var(--space-3);
    }
}

@media (min-width: 800px) {
    .c-kaaUSm-jiYjGq-size-md .c-hMRxhp {
      height: 20px;
      width: 20px;
    }
}

@media (min-width: 800px) {
    .c-kaaUSm-fXTFOn-fullWidth-false {
      width: max-content;
    }
}

@media (min-width: 800px) {
    .c-eEYQKA-cwmvBm-size-md {
      display: block;
    }
}

@media (min-width: 800px) {
    .c-oUmPa-fpPlqP-size-sm {
      height: var(--sizes-3);
      width: var(--sizes-3);
    }
}
}

@media  {
  .c-kaaUSm-klvXVG-cv {
    background: white;
    color: var(--colors-primary800);
  }

  .c-kaaUSm-klvXVG-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-klvXVG-cv:not([disabled]):hover,
  .c-kaaUSm-klvXVG-cv:not([disabled]):focus {
    background: rgba(255, 255, 255, 0.9);
    color: var(--colors-primary800);
  }

  .c-kaaUSm-klvXVG-cv:not([disabled]):active {
    background: rgba(255, 255, 255, 0.75);
  }

  .c-kaaUSm-bSkyfM-cv {
    border: 1px solid;
    border-color: currentColor;
    color: white;
  }

  .c-kaaUSm-bSkyfM-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-bSkyfM-cv:not([disabled]):hover,
  .c-kaaUSm-bSkyfM-cv:not([disabled]):focus {
    text-decoration: none;
    color: rgba(255, 255, 255, 0.8);
  }

  .c-kaaUSm-bSkyfM-cv:not([disabled]):active {
    color: rgba(255, 255, 255, 0.65);
  }

  .c-kHdlDu-cRYaBy-cv {
    margin-right: var(--space-6);
  }

  .c-bYxtOe-cRYaBy-cv {
    margin-right: var(--space-6);
  }
}

<div>
  <div
    class="c-dhzjXW c-bRupYu c-bRupYu-cobKBi-emphasis-bold t-grLKLB"
    role="banner"
  >
    <div
      class="c-PJLV c-gjbGPV c-gjbGPV-lppGPL-size-sm c-gjbGPV-iOglxG-size-md"
    >
      <h2
        class="c-iUMJTc c-iUMJTc-kCkEYj-size-sm c-kHdlDu c-kHdlDu-cRYaBy-cv"
      >
        Get ready for entrance exams
      </h2>
      <p
        class="c-ctivzP c-ctivzP-bndJoy-size-sm c-ctivzP-eMzMJc-weight-normal c-ctivzP-cyRcZm-family-body c-ctivzP-flAohk-size-md c-bYxtOe c-bYxtOe-llIiIE-containerSize-sm c-bYxtOe-gyGikE-containerSize-md c-bYxtOe-cRYaBy-cv"
      >
        Talk to our admissions experts on to learn how to support your child. This is an example lor!
      </p>
      <div
        class="c-dhzjXW c-dhzjXW-iTKOFX-direction-column c-dhzjXW-kaVYFn-gap-2 c-dhzjXW-ioYFCt-direction-row c-dhzjXW-ecwQUv-gap-4"
      >
        <button
          class="c-kaaUSm c-kaaUSm-cbWAnW-size-sm c-kaaUSm-fGHEql-fullWidth-true c-kaaUSm-jiYjGq-size-md c-kaaUSm-fXTFOn-fullWidth-false c-kaaUSm-klvXVG-cv"
          type="button"
        >
          Contact an expert
        </button>
        <button
          class="c-kaaUSm c-kaaUSm-cbWAnW-size-sm c-kaaUSm-fGHEql-fullWidth-true c-kaaUSm-jiYjGq-size-md c-kaaUSm-fXTFOn-fullWidth-false c-kaaUSm-bSkyfM-cv"
          type="button"
        >
          Secondary
        </button>
      </div>
    </div>
    <div
      class="c-PJLV c-eEYQKA c-eEYQKA-kBYYkb-size-sm c-eEYQKA-cwmvBm-size-md"
    >
      <img
        alt="kitten"
        class="c-iSBxEZ c-jQKlgO"
        src="http://placekitten.com/200/300"
      />
    </div>
    <button
      aria-label="dismiss banner"
      class="c-oUmPa c-oUmPa-PrXKS-size-md c-oUmPa-rloUt-isRounded-true c-oUmPa-fpPlqP-size-sm c-gLBWZd"
      data-testid="dismiss"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="c-hMRxhp c-hMRxhp-dMrjnF-size-md c-hMRxhp-iPJLV-css"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6.343 6.343 11.314 11.314m-11.314 0L17.657 6.343"
        />
      </svg>
    </button>
  </div>
</div>
`;
